-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.14.0 RC2
-
None
-
-
c1be521d4b091c8dc65d44e26a8734260a9ad381 (qt/qtwebengine-chromium/77-based)
This one was once filed for Qt Auto, but it turned out that the same happens on the Boot2Qt 5.14rc image on the same NUC, whereas it works OK on desktop. I'm moving it to Boot2Qt
[WARN | js | c.p.youtube] HTML Imports is deprecated and will be removed in M80, around February 2020. Please use ES modules instead. See https://www.chromestatus.com/features/5144752345317376 and https://developers.google.com/web/updates/2019/07/web-components-time-to-upgrade for more details. [CRIT | js | c.p.youtube] Refused to display 'https://accounts.google.com/ServiceLogin?uilel=3&service=youtube&passive=true&continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Faction_handle_signin%3Dtrue%26app%3Ddesktop%26feature%3Dpassive%26next%3D%252Fsignin_passive%26hl%3Dru&hl=ru' in a frame because it set 'X-Frame-Options' to 'deny'. [CRIT | js | c.p.youtube] Uncaught (in promise) AbortError: enumerateDevices() failed. [CRIT | js | c.p.youtube] Uncaught (in promise) AbortError: enumerateDevices() failed. [1009:1047:1206/165642.296003:ERROR:object_proxy.cc(619)] Failed to call method: org.freedesktop.DBus.Properties.Get: object_path= /org/freedesktop/UPower: org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.UPower was not provided by any .service files [1009:1047:1206/165642.297084:ERROR:object_proxy.cc(619)] Failed to call method: org.freedesktop.UPower.GetDisplayDevice: object_path= /org/freedesktop/UPower: org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.UPower was not provided by any .service files [1009:1047:1206/165642.297566:ERROR:object_proxy.cc(619)] Failed to call method: org.freedesktop.UPower.EnumerateDevices: object_path= /org/freedesktop/UPower: org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.UPower was not provided by any .service files [WARN | qt.qpa.wayland | c.p.youtube] Wayland does not support QWindow::requestActivate() Error sending request: Broken pipe *** process /usr/bin/appman-launcher-qml: com.pelagicore.youtube (1009) crashed *** > why: uncaught signal 6 (Aborted) > where: main thread, TID: 1009, pthread ID: 0x7f7f9bc37680 > backtrace: 1: /usr/bin/appman-launcher-qml(+0xade24) [0x55fa8b3a6e24] 2: /usr/bin/appman-launcher-qml(+0xadff3) [0x55fa8b3a6ff3] 3: /usr/bin/appman-launcher-qml(+0xacb61) [0x55fa8b3a5b61] 4: /lib/libpthread.so.0(+0x13340) [0x7f7f9e841340] 5: gsignal [+0xca] 6: abort [+0x110] 7: /usr/lib/libwayland-client.so.0(+0xa26f) [0x7f7f9e82726f] 8: wl_proxy_marshal_array_constructor_versioned [+0x1b5] 9: wl_proxy_marshal [+0xec] 10: QtWayland::zwp_text_input_v2::set_surrounding_text(QString const&, int, int) [+0x48] 11: /usr/lib/libQt5WaylandClient.so.5(+0x8314b) [0x7f7f9f45e14b] 12: /usr/lib/libQt5WaylandClient.so.5(+0x836e0) [0x7f7f9f45e6e0] 13: QInputMethod::update(QFlags<Qt::InputMethodQuery>) [+0x2a] 14: QQuickTextEdit::moveCursorDelegate() [+0x27] 15: /usr/lib/libQt5Quick.so.5(+0x2e0a49) [0x7f7f9fcb4a49] 16: QQuickTextEdit::qt_metacall(QMetaObject::Call, int, void**) [+0xcb] 17: /usr/lib/libQt5Core.so.5(+0x2d6bec) [0x7f7f9eb25bec] 18: /usr/lib/libQt5Quick.so.5(+0x2d6755) [0x7f7f9fcaa755] 19: /usr/lib/libQt5Quick.so.5(+0x2d6913) [0x7f7f9fcaa913] 20: /usr/lib/libQt5Core.so.5(+0x2d6bec) [0x7f7f9eb25bec] 21: QTextDocument::cursorPositionChanged(QTextCursor const&) [+0x35] 22: QTextDocumentPrivate::finishEdit() [+0x16f] 23: /usr/lib/libQt5Quick.so.5(+0x2d463f) [0x7f7f9fca863f] 24: /usr/lib/libQt5Quick.so.5(+0x2d5b88) [0x7f7f9fca9b88] 25: /usr/lib/libQt5Quick.so.5(+0x2d1713) [0x7f7f9fca5713] 26: QQuickTextEdit::inputMethodEvent(QInputMethodEvent*) [+0x69] 27: QQuickItem::event(QEvent*) [+0xc8] 28: QQuickTextEdit::event(QEvent*) [+0x2e] 29: QCoreApplication::notifyInternal2(QObject*, QEvent*) [+0x180] 30: /usr/lib/libQt5WaylandClient.so.5(+0x82ddc) [0x7f7f9f45dddc] 31: QtWayland::zwp_text_input_v2::handle_commit_string(void*, zwp_text_input_v2*, char const*) [+0xb0] 32: ffi_call_unix64 [+0x4c] 33: ffi_call [+0x22f] 34: /usr/lib/libwayland-client.so.0(+0x92dd) [0x7f7f9e8262dd] 35: /usr/lib/libwayland-client.so.0(+0x5ac9) [0x7f7f9e822ac9] 36: wl_display_dispatch_queue_pending [+0x74] 37: QtWaylandClient::QWaylandDisplay::flushRequests() [+0x42] 38: /usr/lib/libQt5Core.so.5(+0x2d6e3d) [0x7f7f9eb25e3d] 39: QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) [+0xf8] 40: QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) [+0x13b] 41: QCoreApplication::exec() [+0x92] 42: /usr/bin/appman-launcher-qml(+0x2394c) [0x55fa8b31c94c] 43: __libc_start_main [+0xeb] 44: /usr/bin/appman-launcher-qml(+0x2405a) [0x55fa8b31d05a] > qml stack: empty > the process will be aborted (core dumped) --- application has quit ---
For Gerrit Dashboard: QTBUG-80627 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
284314,2 | Create an AudioOutputIPCFactory even without WebRTC | 77-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
284435,2 | qtwebengine: enable WebRTC | warrior | yocto/meta-boot2qt | Status: MERGED | +2 | 0 |