Create an AudioOutputIPCFactory even without WebRTC

We need it for non-WebRTC audio as well.

Change-Id: I51a2de68db26838394d0f6d079bcf4e60aeb9a5f
Fixes: QTBUG-80627
Reviewed-by: Michael Brüning <michael.bruning@qt.io>